--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
 <%= yield %>
 
   <div id="footer">
-    &copy; 2011 RubyCommitters.org
+    &copy; 2011 RubyCommitters.org <br/>
+    inspired by _why
   </div>
 
 </body>
