--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,25 @@
 <html>
 <head>
   <title>Ruby Committers</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag "reset", "application", :cache => true %>
+  <%= javascript_include_tag :all, :cache => true %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
-</head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <script type="text/javascript">
+    $(function() {
+    	$('.slideshow').innerfade({
+						speed: 1000,
+						timeout: 5000,
+						type: 'sequence',
+						containerheight: '155px'
+					});
+    });
+  </script>
+ </head>
 <body>
-
-<%= yield %>
-
+  <div id="wrapper">
+   <%= yield %>
+  </div>
 </body>
 </html>
