Removing cache of js and css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Ruby Committers</title>
-  <%= stylesheet_link_tag "reset", "application", :cache => true %>
-  <%= javascript_include_tag :all, :cache => true %>
+  <%= stylesheet_link_tag "reset", "application" %>
+  <%= javascript_include_tag :all %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
