Making things work ...

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag "reset", "application" %>
-  <%= javascript_include_tag :all %>
+  <%= javascript_include_tag "application", "jquery", "jquery.innerfade" %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
