Restyled fork me link and slightly adjusted header.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
   </div>
 </div>
 
-<%= link_to 'fork us on the githubs', 'http://github.com/tenderlove/rubycommitters.org', :id => 'fork_me' %>
+<div class="ribbon"> 
+  <a href="http://github.com/jrmehle/rubycommitters.org">Fork me on GitHub</a> 
+</div>
 
 <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js' %>
 <%= javascript_include_tag :defaults, 'jquery.lettering.min' %>
