--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -2,9 +2,9 @@
   <table>
     <tr>
       <td class="first">
-        <strong class="username">
+        <h2 class="username">
           <%= account.username %>
-        </strong>
+        </h2>
         
         <div class="container">
           <div class='image-wrapper'>
@@ -19,22 +19,24 @@
       </td>
       <td class="last">
         <% unless account.sites.empty? %>
-          <ul>
+          <h3>Sites</h3>
+          <ul class="sites">
             <%= render :partial => 'site', :collection => account.sites %>
           </ul>
         <% end %>
         
-        <% unless account.services.empty? %>
-          <ul>
-            <%= render :partial => 'service', :collection => account.services %>
-          </ul>
-        <% end %>
-        
         <% unless account.books.empty? %>
-          <ul>
+          <h3>Books</h3>
+          <ul class="books">
             <% account.books.each do |book| %>
               <li class="book"><a href="http://www.amazon.<%= book.isbn.match(/^4/) ? "co.jp":"com" %>/dp/<%= book.isbn %>"><%= book.key %></a></li>
             <% end %>
+          </ul>
+        <% end %>
+        
+        <% unless account.services.empty? %>
+          <ul class="services">
+            <%= render :partial => 'service', :collection => account.services %>
           </ul>
         <% end %>
       </td>
