--- a/app/views/accounts/_account.html.haml
+++ b/app/views/accounts/_account.html.haml
@@ -1,31 +1,34 @@
-.item
-  .column.left
-    = render :partial => 'portrait', :locals => {:portrait => account.portraits.first} unless account.portraits.blank?
-    - if account.portraits.blank?
-      .portrait.blank 
-    - unless account.services.empty?
-      .services
-        %h3 Services
-        .meta= render :partial => 'service', :collection => account.services
-  .column.right 
-    %h2= account.username
-    - unless account.names.empty?
-      .names 
-        %h3 Names
-        .meta= render :partial => 'name', :collection => account.names
-      - unless account.nicks.empty?
-        .nicknames 
-          %h3 Nicknames
-          .meta= render :partial => 'name', :collection => account.nicks
-      - unless account.sites.empty?
-        .sites
-          %h3 Sites
-          .meta= render :partial => 'site', :collection => account.sites
+.card
+  .top
+  .main
+    .column.left
+      = render :partial => 'portrait', :locals => {:portrait => account.portraits.first} unless account.portraits.blank?
+      - if account.portraits.blank?
+        .portrait.blank 
+      - unless account.services.empty?
+        .services
+          %h3 Services
+          .meta= render :partial => 'service', :collection => account.services
+    .column.right 
+      %h2= account.username
+      - unless account.names.empty?
+        .names 
+          %h3 Names
+          .meta= render :partial => 'name', :collection => account.names
+        - unless account.nicks.empty?
+          .nicknames 
+            %h3 Nicknames
+            .meta= render :partial => 'name', :collection => account.nicks
+        - unless account.sites.empty?
+          .sites
+            %h3 Sites
+            .meta= render :partial => 'site', :collection => account.sites
           
-      // Book search works* but is flaky - seems like some of these ISBN numbers are wrong...
-      / - unless account.books.empty?
-      /   .books
-      /     %h3 Books
-      /     .meta
-      /       - account.books.each do |book|
-      /         .book= link_to book.title, 'http://www.amazon.com/s?url=field-keywords=' + book.key
+        // Book search works* but is flaky - seems like some of these ISBN numbers are wrong...
+        / - unless account.books.empty?
+        /   .books
+        /     %h3 Books
+        /     .meta
+        /       - account.books.each do |book|
+        /         .book= link_to book.title, 'http://www.amazon.com/s?url=field-keywords=' + book.key
+  .bottom
