--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,11 +1,8 @@
+.matzilla
+.attack
 .fork= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org'
 .header
   %h1 Ruby Committers
-.scrollcontainer
-  .scrollcenter
-    %a.prev.browse.left
-    .scrollable.vertical
-      .items
-        - @accounts.each_slice(6) do |account|
-          %div= render :partial => 'account', :collection => account
-    %a.next.browse.right
+.container
+  - @accounts.each do |account|
+    = render :partial => 'account', :locals => {:account => account}
