--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,4 @@
       .credits
         .ejc.logo= link_to image_tag('ejc_inset.png', :alt => 'Designed by E.J. Coughlin <3'), 'http://twitter.com/ejc'
         .ejc.words= link_to 'Designed by E.J. Coughlin <3', 'http://twitter.com/ejc'
+        .wallpaper= link_to 'Download the "MATZILLA!" Desktop Wallpaper on Flickr', 'http://www.flickr.com/photos/_ejc/5371343453/'
