Added back books.

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -159,11 +159,11 @@ body
               li
                 font-size: 13px
                 padding-top: 5px
-              &.social
+              &.social, &.books
                 margin-bottom: -3px
                 li
                   float: left
-                  margin-right: 5px
+                  margin-right: 3px
                   a
                     display: block
                     width: 16px
@@ -182,6 +182,9 @@ body
                   background: url("/images/social-icons/mixi.png") no-repeat
                 li.twitter a
                   background: url("/images/social-icons/twitter.png") no-repeat
+              &.books
+                li a
+                  background: url("/images/social-icons/book.png") no-repeat
       td.bios
         width: 520px
         font-size: 15px
