--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Ruby Committers</title>
+  <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
   <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Cherry+Cream+Soda', 'http://fonts.googleapis.com/css?family=Allerta' %>
   <%= stylesheet_link_tag :all %>
   <%= csrf_meta_tag %>
