Linked names in footer.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,9 @@
   
   <div id="footer">
     A creation of 
-    <%= link_to 'Melissa Voegeli', '#' %>
+    <%= link_to 'Melissa Voegeli', 'http://twitter.com/MelissaVoegeli' %>
     and 
-    <%= link_to 'Jared Mehle', '#' %>
+    <%= link_to 'Jared Mehle', 'http://twitter.com/jrmehle' %>
     .
   </div>
 </div>
